# glfw-project-template

./: .gitignore  CMakeLists.txt  README.md  main.cpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  vcpkg.json
.github/workflows/: non-main.yml  ubuntu.yml
